# local-code-index

./: .gitignore  README.md  mermaid-flow.md  nemotron-3-super-120b-a12b.explanation.md  pyproject.toml  server.py
.github/agents/: multi-repo-indexer.agent.md
doesThisBelong/build-artifacts/: PKG-INFO  SOURCES.txt
doesThisBelong/stray-docs/: readme copy.md
local_code_index.egg-info/: requires.txt
local_code_mcp.egg-info/: SOURCES.txt  top_level.txt
src/local_code_index/: __init__.py  cli.py  server.py
tests/: test_parser_utils.py  test_server.py
