[project]
name = "local-code-index"
version = "0.1.0"
description = "Scalable multi-repo local codebase indexing MCP server"
dependencies = [
    "mcp[cli]>=0.1.0",
    "lancedb>=0.14.0",
    "ollama>=0.2.0",
    "tree-sitter>=0.23.2",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tiktoken>=0.7.0"  # <-- ADDED FOR TOKEN TRACKING SAFEGUARDS
]
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["server", "parser_utils"]
